--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
-    "react-bits": "^1.0.5",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-native": "^0.80.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
