--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.1",
     "gsap": "^3.13.0",
+    "motion": "^12.23.3",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
