--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.1",
     "gsap": "^3.13.0",
     "motion": "^12.23.3",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-native": "^0.80.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
