--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.1.1",
     "react-icons": "^5.5.0",
     "react-native": "^0.80.1",
     "react-native-web": "^0.20.0",
-    "tailwind-merge": "^3.3.1"
+    "resend": "^4.6.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
