--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-hover-card": "^1.1.14",
     "@react-email/components": "0.3.1",
     "@react-email/tailwind": "1.2.1",
+    "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.1",
     "gsap": "^3.13.0",
